# acpitool

./: .gitignore  AUTHORS  ChangeLog  INSTALL  NEWS  README  TODO  acpitool.spec  configure.in
debian/: changelog  control  copyright  rules  watch
debian/patches/: series  typos.patch
man/: acpitool.1
src/: ac_adapter.cpp  ac_adapter.h  acpitool.cpp  acpitool.h  asus.cpp  asus.h  battery.cpp  battery.h  cpu.cpp  cpu.h  freq.cpp  freq.h  main.cpp  thinkpad.cpp  thinkpad.h  toshiba.cpp  toshiba.h
